tests/ui/issues/issue-14541.stderr
error[E0308]: mismatched types
  --> $DIR/issue-14541.rs:5:9
   |
LL |     let Vec3 { y: _, z: _ } = v;
   |         ^^^^^^^^^^^^^^^^^^^   - this expression has type `Vec2`
   |         |
   |         expected `Vec2`, found `Vec3`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
